--- a/gradle.properties
+++ b/gradle.properties
@@ -7,15 +7,15 @@ org.gradle.parallel=true
 
 
 
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
 loader_version=0.17.2
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.0.1 - 1.21.3
 maven_group=net.naeryth.dtb
 archives_base_name=dtb
 
 # Dependencies
-fabric_version=0.116.5+1.21.1
+fabric_version=0.114.1+1.21.3
